--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -18,8 +18,8 @@
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>KeePassWin_StoreKey.pfx</PackageCertificateKeyFile>
-    <PackageCertificateThumbprint>ED9EBFF21A98A6C2829529A666D7574DB44D5BD5</PackageCertificateThumbprint>
+    <PackageCertificateKeyFile>KeePassWin_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>B445FF998549A7014B4F99D5D595A3CD9CFBF311</PackageCertificateThumbprint>
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
@@ -95,8 +95,6 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <None Include="KeePassWin_StoreKey.pfx" />
-    <None Include="KeePassWin_TemporaryKey.pfx" />
     <Compile Include="Controls\MasterDetailsView\MasterDetailsView.cs" />
     <Compile Include="Controls\MasterDetailsView\MasterDetailsView.Events.cs" />
     <Compile Include="Controls\MasterDetailsView\MasterDetailsView.Properties.cs" />
@@ -176,6 +174,7 @@
     <Content Include="version.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="KeePassWin_TemporaryKey.pfx" />
     <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
