--- a/src/KeePass.Win.Services/project.json
+++ b/src/KeePass.Win.Services/project.json
@@ -1,7 +1,6 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0",
-    "Microsoft.Toolkit.Uwp.Notifications": "1.3.1"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0"
   },
   "frameworks": {
     "uap10.0": {}
