--- a/test/KeePassLib.Test/KeePassLib.Test.csproj
+++ b/test/KeePassLib.Test/KeePassLib.Test.csproj
@@ -13,10 +13,10 @@
     <EmbeddedResource Include="Assets\db1.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.1.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.1.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170217-05" />
-    <PackageReference Include="NSubstitute" Version="1.10.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="NSubstitute" Version="2.0.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\KeePassLib\KeePass.Models.csproj" />
