--- a/src/KeePass.Win.ViewModels/KeePass.Win.ViewModels.csproj
+++ b/src/KeePass.Win.ViewModels/KeePass.Win.ViewModels.csproj
@@ -2,7 +2,14 @@
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <AvailablePlatforms>$(AvailablePlatforms);ARM</AvailablePlatforms>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
   <ItemGroup>
     <EmbeddedResource Include="..\..\version.txt" Link="version.txt" />
   </ItemGroup>
