--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -5,10 +5,11 @@
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.1",
     "Prism.Autofac": "6.2.0",
     "Serilog": "2.4.0",
-    "Serilog.Sinks.Trace": "2.1.0"
+    "Serilog.Sinks.Trace": "2.1.0",
+    "System.Reactive": "3.1.1"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0.14393": {}
   },
   "runtimes": {
     "win10-arm": {},
