Add password generator

--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -102,6 +102,9 @@
     <Compile Include="Controls\NameBoxDialog.xaml.cs">
       <DependentUpon>NameBoxDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\PasswordGenerator.xaml.cs">
+      <DependentUpon>PasswordGenerator.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\SearchBox.xaml.cs">
       <DependentUpon>SearchBox.xaml</DependentUpon>
     </Compile>
@@ -196,6 +199,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\NameBoxDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\PasswordGenerator.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
