--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -1,10 +1,10 @@
 ﻿{
   "dependencies": {
-    "Autofac": "4.6.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
-    "Microsoft.Toolkit.Uwp.UI.Controls": "1.5.0",
+    "Autofac": "4.6.1",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.4",
+    "Microsoft.Toolkit.Uwp.UI.Controls": "1.5.1",
     "Prism.Autofac": "6.3.0",
-    "Serilog": "2.4.0",
+    "Serilog": "2.5.1-dev-00873",
     "Serilog.Sinks.Trace": "2.1.0",
     "System.Reactive": "3.1.1"
   },
