--- a/src/KeePass.Win.Services/project.json
+++ b/src/KeePass.Win.Services/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
+    "System.ValueTuple": "4.4.0"
   },
   "frameworks": {
     "uap10.0.10586": {}
